src/test/resources/valid/Invariant5.sc
/* (c) https://github.com/MontiCore/monticore */
statechart Invariant5 {
  state Foo [mytypes.Address.areaCode > 0];
}