src/test/resources/invalid/InvalidSourceTarget.sc
/* (c) https://github.com/MontiCore/monticore */
statechart InvalidSourceTarget {
  initial state Start;
  EngineOff -> EngineRunning;
}